fix judge command, misc java 21 updates